# vehicle-insurance

./: Dockerfile  LICENSE  app.py  demo.py  pyproject.toml  setup.py
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb
src/configuration/: aws_connection.py
src/constants/: __init__.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
