[project]
name = "vehicle-insurance"
version = "0.1.0"
description = "Add your description here"
authors = [{name = "Kanak Gupta", email = "kanakgupta814@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.34",
    "botocore>=1.43.34",
    "certifi>=2026.6.17",
    "dill>=0.4.1",
    "fastapi>=0.138.0",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.3.0",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "mypy-boto3-s3>=1.43.31",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pymongo>=4.17.0",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.49.0",
]
